# hlibs

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  sonar-analysis.sh  sonar-build.sh  sonar-project.properties.shadow  to_update.info
catch2_tests/: CMakeLists.txt  main_test.cpp  types_test.cpp
catch2_tests/ansi/: ansi_test.cpp
catch2_tests/date_time/: date_time_test.cpp
catch2_tests/facilities/: strings_test.cpp  timestamp_test.cpp
catch2_tests/file/: file_info.cpp  file_info_test.cpp  file_reader_base_test.cpp  stream_to_file_test.cpp
catch2_tests/interfaces/: i_stringify_test.cpp
catch2_tests/io/file/: file_info_test.cpp  stream_to_file_test.cpp
catch2_tests/io/file_reader/: file_reader_base_test.cpp
catch2_tests/io/file_writer/: file_writer_test.cpp
catch2_tests/logging/: severity_level_test.cpp  stdout_logger_test.cpp  string_logger_test.cpp
catch2_tests/standard/: ansi_test.cpp
catch2_tests/strings/: strings_test.cpp
catch2_tests/templates/: object_counter_test.cpp  range_test.cpp
catch2_tests/types/: interfaces_test.cpp  types_test.cpp
customization/: Minimalist_color_scheme.icls  Project_code_style.clang-format  Project_code_style.xml  sonar-project.properties_
inputs/: file-loader-1-move-1.txt  file-loader-2-read.txt  file-reader-1-read.txt  file-reader-2-read.txt  get-file-size-1.txt  get-file-size-2-unicode.txt
notes/: ansi_escapes  todos.txt
scripts/: clean-targets.sh  code-coverage.sh  sonar-analysis.sh  sonar-build.sh  sonar-clean.sh
sources/: main.cpp
sources/facilities/: strings.hpp  timestamp.hpp
sources/io/: file_info.hpp  free_functions.hpp  helper_objects.hpp  stream_to_file.hpp
sources/io/file/: file_info.hpp  stream_to_file.hpp
sources/io/file_reader/: file_reader.hpp  file_reader_base.hpp  file_reader_buffered.hpp
sources/io/file_writer/: file_writer.hpp
sources/logging/: console_logger.hpp  logger.hpp  stdout_logger.hpp  string_logger.hpp
sources/standard/: ansi.hpp
sources/types/: interfaces.hpp  types.hpp
src/: main.cpp  types.hpp
src/ansi/: ansi.hpp  prog__ansi_escapes
src/date_time/: date_time.hpp
src/facilities/: strings.hpp  timestamp.hpp
src/file/: file_info.hpp  file_reader.hpp  file_reader_base.hpp  file_reader_buffered.hpp  stream_to_file.hpp
src/interfaces/: i_stringify.hpp
src/io/file/: file_info.hpp  stream_to_file.hpp
src/io/file_reader/: file_reader.hpp  file_reader_base.hpp  file_reader_buffered.hpp
src/io/file_writer/: file_writer.hpp
src/log/: logger.hpp
src/logging/: console_logger.hpp  logger.cpp  logger.hpp  stdout_logger.hpp  string_logger.hpp
src/standard/: ansi.hpp
src/strings/: strings.hpp
src/templates/: object_counter.hpp  range.hpp
src/types/: interfaces.hpp  types.hpp
tests/: CMakeLists.txt
tests/facilities/: strings_test.cpp  timestamp_test.cpp
tests/io/: file_info_test.cpp  free_functions_test.cpp  helper_objects_test.cpp  stream_to_file_test.cpp
tests/io/file/: file_info_test.cpp  stream_to_file_test.cpp
tests/io/file_reader/: file_reader_base_test.cpp
tests/io/file_writer/: file_writer_test.cpp
tests/logging/: logger_test.cpp  severity_level_test.cpp  stdout_logger_test.cpp  string_logger_test.cpp
tests/standard/: ansi_test.cpp
tests/types/: interfaces_test.cpp  types_test.cpp
